Created unit test fixtures

--- a/project03/depot/test/fixtures/products.yml
+++ b/project03/depot/test/fixtures/products.yml
@@ -11,3 +11,10 @@ two:
   description: MyText
   image_url: MyString
   price: 9.99
+
+ruby:
+  title: Programming Ruby 1.9
+  description: 
+    Ruby is a blah blah blah lorem ipsum dolor sit elit amet consequtis cheese is fun to eat.
+  price: 55.55
+  image_url: ruby.png
