--- a/project03/depot/test/fixtures/line_items.yml
+++ b/project03/depot/test/fixtures/line_items.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  product_id: 1
+  product: one
   order: one
 
 two:
-  product_id: 1
+  product: one
   cart: one
