--- a/project06/Gemfile
+++ b/project06/Gemfile
@@ -33,3 +33,6 @@ gem 'jquery-rails'
 
 # To use debugger
 # gem 'ruby-debug19', :require => 'ruby-debug'
+
+gem 'haml'
+gem "nifty-generators", :group => :development
