--- a/project06/Gemfile
+++ b/project06/Gemfile
@@ -40,4 +40,5 @@ gem 'jquery-rails'
 gem 'authlogic'
 gem 'will_paginate'
 gem 'haml'
+gem 'paperclip'
 gem "recaptcha", :require => "recaptcha/rails"
