--- a/project06/Gemfile
+++ b/project06/Gemfile
@@ -41,4 +41,5 @@ gem 'authlogic'
 gem 'will_paginate'
 gem 'haml'
 gem 'paperclip'
+gem 'declarative_authorization'
 gem "recaptcha", :require => "recaptcha/rails"
